--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,7 @@
 
 <%= form_with model: @user, url: user_registration_path , class: 'registration-main', local: true do |f| %>
 
+<div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
       会員情報入力
