--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -60,7 +60,7 @@
           <span class="indispensable">必須</span>
         </div>
         <div class='input-expiration-date-wrap'>
-          <div class="input-expiration-date", id="card-exp"></div>
+          <div class="input-default", id="card-exp"></div>
         </div>
       </div>
       <div class="form-group">
